--- a/src/features/settings/settings.css
+++ b/src/features/settings/settings.css
@@ -27,8 +27,7 @@
   border: none;
   border-radius: 10px 0 0 10px;
   background-color: var(--primary-light-green);
-  border-right: 7px solid var(--light-blue);
- 
+  border-right: 7px solid var(--primary-light-green);
   transition: all 0.25s;
 }
 
@@ -107,7 +106,7 @@ form.setting {
 #settings-container form.setting > *,
 #settings-container #select-currency {
   width: 90%;
-  margin-right: 1.4rem;
+  margin-right: 0.7rem;
   min-height: 4rem;
 }
 
@@ -141,7 +140,7 @@ form.setting {
 
 .setting button.submit:hover,
 .setting button.submit:active {
-  background-color: #141c3a;
+  background-color: var(--primary-dark-green);
   color: #ffffff;
 }
 
